Added Content, Refactored CSS

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="./js/app.js" type="module" defer></script>
+    <script src="https://kit.fontawesome.com/74b956baff.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./css/style.css">
     <title>Dashboard</title>
 </head>
@@ -14,69 +15,134 @@
             <img src="" alt="">
             <h1>Dashboard</h1>
         </div>
-        <div class="primary-buttons">
-            <img src="" alt="">
-            <button>Home</button>
-            <img src="" alt="">
-            <button>Profile</button>
-            <img src="" alt="">
-            <button>Messages</button>
-            <img src="" alt="">
-            <button>History</button>
-            <img src="" alt="">
-            <button>Tasks</button>
-            <img src="" alt="">
-            <button>Communities</button>
+            <div class="side-bar-button-container">
+                <i class="fa-solid fa-house"></i>
+                <button>Home</button>
+                <i class="fa-solid fa-user"></i>
+                <button>Profile</button>
+                <i class="fa-solid fa-message"></i>
+                <button>Messages</button>
+                <i class="fa-solid fa-clock-rotate-left"></i>
+                <button>History</button>
+                <i class="fa-solid fa-list-check"></i>
+                <button>Tasks</button>
+                <i class="fa-solid fa-users"></i>
+                <button>Communities</button>
+                <div class="empty-div"></div>
+                <div class="empty-div"></div>
+                <i class="fa-solid fa-gear"></i>
+                <button>Settings</button>
+                <i class="fa-solid fa-question"></i>
+                <button>Support</button>
+                <i class="fa-solid fa-shield-halved"></i>
+                <button>Privacy</button>
+            </div>
+        <div class="footer">Made By Ashley Wright
+            <i class="fa-brands fa-github"></i>
         </div>
-        <div class="secondary-buttons">
-            <img src="" alt="">
-            <button>Settings</button>
-            <img src="" alt="">
-            <button>Support</button>
-            <img src="" alt="">
-            <button>Privacy</button>
-        </div>
-        <div class="footer">Made By</div>
     </div>
     <div class="content-container">
-        <div class="header-container"></div>
+        <div class="header-container">
+            <div class="header-search-container">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" name="" class="searchbar-element">
+            </div>
+            <div class="header-profile-container">
+                <i class="fa-solid fa-bell"></i>
+                <img src="" alt="Profile Picture">
+                <p>Tarot Reader</p>
+            </div>
+            <div class="header-info-container">
+                <img class="profile-picture" src="./images/pfp.png" alt="Profile Picture">
+                <div class="header-info-content">
+                    <p>Hi there!</p>
+                    <h1>Tarot Reader (@Tarot)</h1> 
+                </div>
+            </div>
+            <div class="header-buttons-container">
+                <button>New</button>
+                <button>Upload</button>
+                <button>Share</button>
+            </div>
+        </div>
         <div class="body-container">
             <h2>Projects</h2>
-            <h2 id="h2-announce">Announcements</h2>
-            <div class="project-container">
+            <h2>Trending</h2>
+            <div class="body-project-container">
                     <div class="project-element">
-                        <h2>The Fool</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus hendrerit nisl, sit amet lobortis libero facilisis eu. Donec vehicula neque vel lorem venenatis, quis hendrerit tellus viverra. In porttitor sagittis velit, et luctus lacus condimentum at. Vivamus in suscipit nisi. Nulla magna nunc, elementum quis cursus at, dignissim ac felis. Sed a vulputate metus. Integer ac eleifend diam.</p>
+                        <div class="project-text-wrapper">
+                            <h2>The Fool</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut rhoncus hendrerit nisl, sit amet lobortis libero facilisis eu. Donec vehicula neque vel lorem venenatis, quis hendrerit tellus viverra. In porttitor sagittis velit, et luctus lacus condimentum at. Vivamus in suscipit nisi. Nulla magna nunc, elementum quis cursus at, dignissim ac felis. Sed a vulputate metus. Integer ac eleifend diam.</p>    
+                        </div>
+                        <div class="project-icons-container">
+                            <a href=""><i class="fa-solid fa-star"></i></a>
+                            <a href=""><i class="fa-solid fa-eye"></i></a>
+                            <a href=""><i class="fa-solid fa-code-fork"></i></a>
+                        </div>
                     </div>
                     <div class="project-element">
-                        <h2>Justice</h2>
-                        <p>Curabitur ultrices vehicula mollis. Etiam vel aliquet magna. Morbi sit amet sem ante. Cras eleifend eros a ipsum tempor commodo. Integer iaculis suscipit lacinia. Nunc nec ultrices risus. Ut maximus est erat, sit amet consequat magna varius quis. Fusce vel elit bibendum, finibus sapien vel, sodales velit.</p>
+                        <div class="project-text-wrapper">
+                            <h2>Justice</h2>
+                            <p>Curabitur ultrices vehicula mollis. Etiam vel aliquet magna. Morbi sit amet sem ante. Cras eleifend eros a ipsum tempor commodo. Integer iaculis suscipit lacinia. Nunc nec ultrices risus. Ut maximus est erat, sit amet consequat magna varius quis. Fusce vel elit bibendum, finibus sapien vel, sodales velit.</p>    
+                        </div>
+                        <div class="project-icons-container">
+                            <a href=""><i class="fa-solid fa-star"></i></a>
+                            <a href=""><i class="fa-solid fa-eye"></i></a>
+                            <a href=""><i class="fa-solid fa-code-fork"></i></a>
+                        </div>
                     </div>
                     <div class="project-element">
-                        <h2>The Moon</h2>
-                        <p>Aliquam ut mi nec tortor interdum placerat. Proin fermentum feugiat est, vitae rutrum purus eleifend id. Nunc congue elementum augue, quis scelerisque est. Quisque ac sapien iaculis dolor bibendum pellentesque quis quis sapien. Nunc accumsan fermentum dui sed sollicitudin. Morbi eu neque lorem.</p>
+                        <div class="project-text-wrapper">
+                            <h2>The Moon</h2>
+                            <p>Aliquam ut mi nec tortor interdum placerat. Proin fermentum feugiat est, vitae rutrum purus eleifend id. Nunc congue elementum augue, quis scelerisque est. Quisque ac sapien iaculis dolor bibendum pellentesque quis quis sapien. Nunc accumsan fermentum dui sed sollicitudin. Morbi eu neque lorem.</p>
+                        </div>
+                        <div class="project-icons-container">
+                            <a href=""><i class="fa-solid fa-star"></i></a>
+                            <a href=""><i class="fa-solid fa-eye"></i></a>
+                            <a href=""><i class="fa-solid fa-code-fork"></i></a>
+                        </div>
                     </div>
                     <div class="project-element">
-                        <h2>The Sun</h2>
-                        <p>Suspendisse ultrices egestas elementum. Quisque luctus elit eget nunc consequat commodo. Integer iaculis orci ligula, vel placerat eros malesuada non. In volutpat risus et lacinia scelerisque. Nunc interdum auctor erat, sit amet aliquam magna placerat ac. Vestibulum ut enim laoreet, rhoncus velit eget, tincidunt justo.</p>
+                        <div class="project-text-wrapper">
+                            <h2>The Sun</h2>
+                            <p>Suspendisse ultrices egestas elementum. Quisque luctus elit eget nunc consequat commodo. Integer iaculis orci ligula, vel placerat eros malesuada non. In volutpat risus et lacinia scelerisque. Nunc interdum auctor erat, sit amet aliquam magna placerat ac. Vestibulum ut enim laoreet, rhoncus velit eget, tincidunt justo.</p>
+                        </div>
+                        <div class="project-icons-container">
+                            <a href=""><i class="fa-solid fa-star"></i></a>
+                            <a href=""><i class="fa-solid fa-eye"></i></a>
+                            <a href=""><i class="fa-solid fa-code-fork"></i></a>
+                        </div>
                     </div>
                     <div class="project-element">
-                        <h2>The Hermit</h2>
-                        <p>Sed et ornare mauris. Integer blandit molestie feugiat. Quisque nulla orci, semper et dui in, dignissim maximus purus. Sed fermentum metus at finibus ultrices. Duis efficitur consequat accumsan. Suspendisse sagittis lorem lectus, eu auctor est aliquet id. Aliquam quis hendrerit risus.</p>
+                        <div class="project-text-wrapper">
+                            <h2>The Hermit</h2>
+                            <p>Sed et ornare mauris. Integer blandit molestie feugiat. Quisque nulla orci, semper et dui in, dignissim maximus purus. Sed fermentum metus at finibus ultrices. Duis efficitur consequat accumsan. Suspendisse sagittis lorem lectus, eu auctor est aliquet id. Aliquam quis hendrerit risus.</p>
+                        </div>
+                        <div class="project-icons-container">
+                            <a href=""><i class="fa-solid fa-star"></i></a>
+                            <a href=""><i class="fa-solid fa-eye"></i></a>
+                            <a href=""><i class="fa-solid fa-code-fork"></i></a>
+                        </div>
                     </div>
                     <div class="project-element">
-                        <h2>The World</h2>
-                        <p>Phasellus rutrum fringilla metus, at auctor eros porta nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam et nisl eu ex sagittis tristique at vulputate eros. Phasellus tincidunt non lacus quis fringilla. Pellentesque porttitor nulla id dolor faucibus cursus. Donec at massa vitae dolor porttitor molestie.</p>
+                        <div class="project-text-wrapper">
+                            <h2>The World</h2>
+                            <p>Phasellus rutrum fringilla metus, at auctor eros porta nec. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam et nisl eu ex sagittis tristique at vulputate eros. Phasellus tincidunt non lacus quis fringilla. Pellentesque porttitor nulla id dolor faucibus cursus. Donec at massa vitae dolor porttitor molestie.</p>
+                        </div>
+                        <div class="project-icons-container">
+                            <a href=""><i class="fa-solid fa-star"></i></a>
+                            <a href=""><i class="fa-solid fa-eye"></i></a>
+                            <a href=""><i class="fa-solid fa-code-fork"></i></a>
+                        </div>
                     </div>
             </div>
-            <div class="side-container">
-                <div class="announcements">
+            <div class="body-side-container">
+                <div class="announcements-container">
                     <div class="announcement-element"></div>
                     <div class="announcement-element"></div>
                     <div class="announcement-element"></div>
                 </div>
-                <h2>Trending</h2>
-                <div class="trending">
+                <div class="trending-container">
                     <div class="trending-element"></div>
                     <div class="trending-element"></div>
                     <div class="trending-element"></div>
