Added remaining content

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <title>Dashboard</title>
 </head>
 <body>          
-    <div class="side-bar-container">
+    <div class="nav-bar-container">
         <div class="logo">
             <img src="" alt="">
             <h1>Dashboard</h1>
         </div>
-            <div class="side-bar-button-container">
+            <div class="nav-bar-button-container">
                 <i class="fa-solid fa-house"></i>
                 <button>Home</button>
                 <i class="fa-solid fa-user"></i>
@@ -37,8 +37,11 @@
                 <i class="fa-solid fa-shield-halved"></i>
                 <button>Privacy</button>
             </div>
-        <div class="footer">Made By Ashley Wright
-            <i class="fa-brands fa-github"></i>
+        <div class="footer">
+            <p>Made By Ashley Wright</p>
+            <a href="https://github.com/AshleyWrightA"> 
+                <i class="fa-brands fa-github"></i>
+            </a>      
         </div>
     </div>
     <div class="content-container">
@@ -49,8 +52,8 @@
             </div>
             <div class="header-profile-container">
                 <i class="fa-solid fa-bell"></i>
-                <img src="" alt="Profile Picture">
-                <p>Tarot Reader</p>
+                <img src="./images/pfp.png" alt="Profile Picture">
+                <h2>Tarot Reader</h2>
             </div>
             <div class="header-info-container">
                 <img class="profile-picture" src="./images/pfp.png" alt="Profile Picture">
@@ -67,7 +70,7 @@
         </div>
         <div class="body-container">
             <h2>Projects</h2>
-            <h2>Trending</h2>
+            <h2>Announcements</h2>
             <div class="body-project-container">
                     <div class="project-element">
                         <div class="project-text-wrapper">
@@ -136,16 +139,20 @@
                         </div>
                     </div>
             </div>
-            <div class="body-side-container">
+            <div class="side-container">
                 <div class="announcements-container">
-                    <div class="announcement-element"></div>
-                    <div class="announcement-element"></div>
-                    <div class="announcement-element"></div>
+                    <h2>Site Maintainance</h2>
                 </div>
+                <h2>Trending</h2>
                 <div class="trending-container">
-                    <div class="trending-element"></div>
-                    <div class="trending-element"></div>
-                    <div class="trending-element"></div>
+                    <img src="./images/pfp.png" alt="">     
+                    <h3>@5 of Pentacles</h3>
+                    <img src="./images/pfp.png" alt="">     
+                    <h3>@2 of Swords</h3>
+                    <img src="./images/pfp.png" alt="">     
+                    <h3>@8 of Cups</h3>
+                    <img src="./images/pfp.png" alt="">     
+                    <h3>@4 of Wands</h3>
                 </div>
             </div>
         </div>
